--- a/package.json
+++ b/package.json
@@ -9,15 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.10.1",
+    "@mantine/hooks": "^5.10.1",
+    "@mantine/modals": "^5.10.1",
+    "@mantine/next": "^5.10.1",
+    "@mantine/notifications": "^5.10.1",
+    "@mantine/nprogress": "^5.10.1",
     "@next/font": "13.1.3",
+    "@picocss/pico": "^1.5.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
+    "nanoid": "^4.0.0",
     "next": "13.1.3",
+    "peerjs": "^1.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.5.4",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/simple-peer": "^9.11.5",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
