--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "cookies-next": "^2.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "nanoid": "^4.0.0",
