--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "peerjs": "^1.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.11.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "video.js": "^7.21.1"
   },
   "devDependencies": {
     "@types/simple-peer": "^9.11.5",
+    "@types/video.js": "^7.3.50",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
