--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,27 +19,36 @@
     "@mantine/nprogress": "^5.10.1",
     "@next/font": "13.1.3",
     "@picocss/pico": "^1.5.6",
+    "@tabler/icons-react": "^2.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "cookies-next": "^2.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
+    "firebase": "^9.16.0",
     "nanoid": "^4.0.0",
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-player": "^2.11.0",
+    "react-use": "^17.4.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.4",
     "typescript": "4.9.4",
-    "video.js": "^7.21.1"
+    "video.js": "^7.21.1",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/simple-peer": "^9.11.5",
     "@types/video.js": "^7.3.50",
     "autoprefixer": "^10.4.13",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4"
   }
 }
