--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "client",
-  "version": "0.2.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
+    "@emotion/serialize": "^1.1.1",
     "@emotion/server": "^11.10.0",
+    "@emotion/utils": "^1.2.0",
     "@mantine/core": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
     "@mantine/modals": "^5.10.1",
@@ -27,6 +21,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "firebase": "^9.16.0",
+    "mongoose": "^7.0.2",
     "nanoid": "^4.0.0",
     "next": "13.1.3",
     "react": "18.2.0",
@@ -50,5 +45,14 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "name": "client",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "version": "0.2.0"
 }
