--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "sourceMap": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
