--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "5.0.2"
   }
 }
