--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.8.0",
     "react-player": "^2.11.0",
     "react-use": "^17.4.0",
     "simple-peer": "^9.11.1",
