--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mantine/modals": "^6.0.5",
     "@mantine/next": "^6.0.5",
     "@mantine/notifications": "^6.0.5",
+    "@popperjs/core": "^2.11.7",
+    "@radix-ui/react-popover": "^1.0.5",
     "cookies-next": "^2.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
@@ -29,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.11.0",
+    "react-popper": "^2.3.0",
     "react-use": "^17.4.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.6.1",
